# Mailmind

./: .env.example  .gitignore  README.md  docker-compose.yml
apps/api/: pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: ba18fd9ae709_initial_schema.py
apps/api/app/: config.py  db.py  db_sync.py  embeddings.py  main.py  models.py  security.py  txn_extract.py
apps/api/app/agent/: context.py  graph.py  prompts.py  tools.py
apps/api/app/gmail/: client.py  parser.py  send.py  sync.py
apps/api/app/retrieval/: hybrid.py
apps/api/app/routers/: actions.py  auth.py  chat.py  health.py  sync.py  transactions.py
apps/api/app/workers/: celery_app.py  tasks.py
apps/api/tests/: test_health.py
apps/web/app/: layout.tsx  page.tsx
apps/web/app/transactions/: page.tsx
apps/web/components/: Chat.tsx  Connect.tsx
apps/web/lib/: api.ts
docker/: postgres-init.sql
docs/: DEEP-DIVE.md  SPEC.md
evals/: golden.example.json  run_evals.py
