[project]
name = "mailmind-api"
version = "0.1.0"
description = "MailMind API — AI email agent backend (FastAPI + LangGraph + pgvector)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "redis>=5.2",
    "celery[redis]>=5.6.3",
    "google-api-python-client>=2.198.0",
    "google-auth-oauthlib>=1.4.0",
    "langchain>=1.3.14",
    "langgraph>=1.2.9",
    "langchain-google-genai>=4.2.7",
    "pgvector>=0.5.0",
    "alembic>=1.18.5",
    "itsdangerous>=2.2.0",
    "cryptography>=49.0.0",
    "beautifulsoup4>=4.15.0",
    "langgraph-checkpoint-postgres>=3.1.0",
    "psycopg[binary]>=3.3.4",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: FastAPI's `Depends(...)` in defaults is the framework's idiom
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
